package homepage 추가

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
             "react-app/jest"
         ]
     },
+    "homepage": "https://heekang2271.github.io/react-hooks/",
     "browserslist": {
         "production": [
             ">0.2%",
